<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RestaurantManagement</string>
    <string name="signup">Signup</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin">Signin</string>

    <!-- Login -->
    <string name="tv_login">Login</string>
    <string name="login_subtitle">Let\'s Login to Access all features</string>
    <string name="et_email">Enter Email</string>
    <string name="et_password">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="txt_required">Required*</string>
    <string name="txt_invalid_email">Invalid Email id</string>
    <string name="login_activity">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>


    <!-- Sign up string -->
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="joined_us_before_sign_in">Joined us before?</string>
    <string name="haven_t_registered">Haven\'t registered?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in!</string>
    <string name="or">OR</string>
    <string name="txt_password_mismatch">Password Mis-match</string>
    <string name="sign_up_activity">Sign up</string>
    <string name="tutorialscreen_txt1">You are what you eat \nso eat right.</string>
    <string name="tutorial_screen_txt2">Taste fresh delicious meals \nanytime</string>
    <string name="tutorial_screen_txt3">Choose Your Favourite Dishes \nfrom the menu</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="text_will_do_letter">I will do it letter</string>
    <string name="content_description">Image</string>
    <!-- End sign up strings -->

    <!--Home-->
    <string name="home_title">Home</string>
    <string name="item_burger">Spicy cheese burger</string>
    <string name="txt_off">30% OFF</string>
    <string name="txt_upto">Upto ₹10</string>
    <string name="hello_blank_fragment">Hello Cart fragment</string>
    <string name="hello_user_fragment">Hello User fragment</string>

    <string name="home">Home</string>
    <string name="dine_in">Dine In</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="popular_items">Popular Foods</string>
    <string name="view_all">view all</string>
    <string name="cancel">Cancel</string>
    <string name="cart_food_name">Spicy cheese burger</string>
    <string name="cart_food_price">$05.99</string>
    <string name="book_table">Book Table</string>
    <string name="book_your_table">Book your Table</string>
    <string name="available">Available</string>
    <string name="book">Booked</string>
    <string name="selected">selected</string>
    <string name="special_offer">Special Offer</string>

    <!--    Menu Strings-->
    <string name="searchText">Search</string>
    <string name="_05_99">$05.99</string>
    <string name="spicy_cheese_burger">Spicy Cheese Burger</string>
    <string name="_1">0</string>
    <string name="table">Table</string>
    <!--End Menu Strings-->

    <!--    Profile Strings-->
    <string name="userName">Username</string>
    <string name="logout">Logout</string>

    <!--    Menu Strings-->
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--End Menu Strings-->
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_subtitle">Enter your email</string>
    <string name="btn_submit">Submit</string>
    <string name="tv_reset_password">Reset Password</string>
    <string name="tv_confirm_password">Re-Enter Password</string>
    <string name="password_subtitle">Enter your password</string>
    <string name="btn_change">Change</string>
    <string name="zero">0</string>
    <string name="vraj_shah_gmail_com">vraj.shah@gmail.com</string>
    <string name="vraj">vraj</string>
    <string name="forgot_pass">forgot password?</string>
</resources>