<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/fmHome"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/fmDinein"
            android:icon="@drawable/menu"
            android:title="@string/dine_in"/>

        <item
            android:id="@+id/fmCart"
            android:icon="@drawable/cart"
            android:title="@string/cart"/>

        <item
            android:id="@+id/fmFavoriteOrder"
            android:icon="@drawable/favorite"
            android:title="@string/favorite"/>

        <item
            android:id="@+id/fmProfile"
            android:icon="@drawable/profile"
            android:title="@string/favorite"/>
</menu>