<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvCartItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="fill"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_3sdp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cvLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFoodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/cart_food_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvFoodTotalPrice"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/cart_food_price"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stepper" />

            <LinearLayout
                android:id="@+id/stepper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnMinus"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/minus_button" />

                <TextView
                    android:id="@+id/txtQuantity"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textSize="@dimen/_10ssp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnAdd"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/plus_button" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>